# Othello

./: .gitignore  CMakeLists.txt  Makefile  Othello.dev  Othello_submit.cpp  README.md  ai.cpp  ai.h  base.h  camera.h  display.cpp  display.h  element.cpp  element.h  game.cpp  game.h  io.cpp  io.h  main.cpp  model.cpp  model.h  player.cpp  player.h  report.md  shader.cpp  shader.h  texture.frag  texture.vert
control/: io.cpp  io.h  model.cpp  model.h
core/: ab-branch.cpp  ab-branch.h  ai.cpp  ai.h  element.cpp  element.h  game.cpp  game.h  player.cpp  player.h
render/: camera.h  display.cpp  display.h  light.frag  shader.h  simple.vert
shader/: light.frag  shader.h  simple.frag  simple.vert  with_color.frag  with_color.vert
